{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 14,
  "lineage": "ffda7122-5571-c7ca-7a28-3671f84f201f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0b64a9581ada01f",
            "arn": "arn:aws:ec2:us-east-1:225908212644:instance/i-0f5eabbc82186cadb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-20230516060938837300000002",
            "id": "i-0f5eabbc82186cadb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c4d02155ff83848a",
            "private_dns": "ip-172-0-0-9.ec2.internal",
            "private_ip": "172.0.0.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-09336e5a13e938f41",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097a11a30eecd9baa",
            "tags": {
              "Name": "EFS-Mount-Demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b6f88b8584575c99"
            ]
          },
          "dependencies": [
            "aws_efs_file_system.file-system",
            "aws_efs_mount_target.efs",
            "aws_iam_instance_profile.ec2-profile",
            "aws_iam_role.ec2-role",
            "aws_security_group.nfs-sg",
            "aws_subnet.nfs_subnet",
            "aws_vpc.nfs_vpc",
            "data.aws_ami.amazon-linux-2",
            "data.template_file.init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:security-group/sg-0b6f88b8584575c99",
            "description": "EFS-EC2 Access Security Group",
            "egress": [],
            "id": "sg-0b6f88b8584575c99",
            "ingress": [],
            "name": "terraform-20230516061000468600000004",
            "name_prefix": "terraform-",
            "owner_id": "225908212644",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "EFS-Mount-Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-02edbccbe0d0c581f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nfs-sg-rule-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress rule to to allow traffic from instances to EFS",
            "from_port": 2049,
            "id": "sgrule-1797919335",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b6f88b8584575c99",
            "self": true,
            "source_security_group_id": null,
            "to_port": 2049,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nfs-sg",
            "aws_vpc.nfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nfs-sg-rule-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress rule to allow traffic to EFS",
            "from_port": 2049,
            "id": "sgrule-4005827974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b6f88b8584575c99",
            "self": true,
            "source_security_group_id": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nfs-sg",
            "aws_vpc.nfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nfs_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:subnet/subnet-097a11a30eecd9baa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.0.0.0/28",
            "id": "subnet-097a11a30eecd9baa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225908212644",
            "tags": {
              "Name": "EFS-Mount-Demo"
            },
            "tags_all": {
              "Name": "EFS-Mount-Demo"
            },
            "vpc_id": "vpc-02edbccbe0d0c581f"
          },
          "dependencies": [
            "aws_vpc.nfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nfs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:vpc/vpc-02edbccbe0d0c581f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/24",
            "default_network_acl_id": "acl-05e75e63cef492ff3",
            "default_route_table_id": "rtb-04e0dd9e617b5105e",
            "default_security_group_id": "sg-035f28902481ef30f",
            "dhcp_options_id": "dopt-ff341285",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02edbccbe0d0c581f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04e0dd9e617b5105e",
            "owner_id": "225908212644",
            "tags": {
              "Name": "EFS-Mount-Demo"
            },
            "tags_all": {
              "Name": "EFS-Mount-Demo"
            }
          }
        }
      ]
    }
  ]
}